Turn app into react app with live backend

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
-robotdiff
-robot_diff
-robotdiff.html
-*.html
+/robotdiff
+/robot_diff
 *.xml
 .DS_Store
+
+# React frontend
+web/node_modules/
+web/dist/
